# proof-bench

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SETUP.md  lake-manifest.json  lakefile.lean  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: proof-bench.jsonl
problems/: algebraicGeometry_vakil_ch_11_2_E.lean  measure_dembo_1-1-5.lean.lean
problems/informal/: algebraicGeometry_vakil_ch_11_2_E_proof.tex  algebraicGeometry_vakil_ch_11_2_E_statement.tex  measure_dembo_1-1-5_proof.tex  measure_dembo_1-1-5_statement.tex
proof_bench/: __init__.py  agent.py  custom_model.py  lean_parser.py  load_problems.py  loogle_daemon.py  mcp_client.py  metadata_utils.py  paths.py  prompts.py  prover.py  service.py  tools.py  utils.py  validate_and_export.py
proof_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: support.py  test_agent.py  test_loogle_local_stdio.py  test_main_tool_configs.py  test_proof_functions.py  test_tools.py
